[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-mcp-server-pro"
version = "1.1.0"
description = "MCP server for vision capabilities with automatic model fallback via ModelScope API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
vision-mcp-server-pro = "vision_mcp_server_pro:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_mcp_server_pro"]
